2004-04-20  graydon hoare  <graydon@pobox.com>

	* lua.hh, lua.cc (hook_note_commit): New hook.
	* commands.cc (commit): Call it.

2004-04-19  graydon hoare  <graydon@pobox.com>

	* cert.cc: Make trust messages nicer.
	* merkle_tree.cc: Clarify logging messages.
	* netsync.cc: Reorganize tickers, put client in txn.
	* packet.cc, packet.hh: Teach about constructability.

2004-04-16  graydon hoare  <graydon@pobox.com>

	* netsync.cc (session::extra_manifests): New member.
	(session::analyze_ancestry_graph): Use it.
	* tests/t_singlenetsync.at: New test for single manifest sync.
	* testsuite.at: Call it.

2004-04-13  Tom Tromey  <tromey@redhat.com>

	* monotone.texi: Typo fixes.

2004-04-10  graydon hoare  <graydon@pobox.com>

	* netsync.cc: Minor bug fixes.

2004-04-10  graydon hoare  <graydon@pobox.com>

	* database.{cc,hh}: 
	* commands.{cc,hh}:
	* lua.{cc,hh}:
	* std_hooks.lua:
	* vocab_terms.hh:
	Implement first cut at selectors.

2004-04-10  graydon hoare  <graydon@pobox.com>

	* cert.cc (operator<): Include name in compare.
	(operator==): Likewise.
	* packet.cc: Include shared_ptr.
	* rcs_file.cc: Rewrite by hand, no spirit.
	* rcs_import.cc: Change ticker names a bit.

2004-04-09  graydon hoare  <graydon@pobox.com>

	* app_state.cc: Fix a couple file path constructions.
	* file_io.cc (book_keeping_file): Make one variant static.
	* manifest.cc: Remove some dead code in walkers.
	* work.cc: Ditto.
	* rcs_file.cc: fcntl fix from Paul Snively for OSX.

2004-04-09  graydon hoare  <graydon@pobox.com>

	* file_io.cc: Fix boost filesystem "." and ".." breakage.
	* lua.cc: Fix format of log entry.
	* monotone.cc: Log locale settings on startup.
	* sanity.cc: Dump prefix on --verbose activation.
	* testsuite/t_i18n_file.at: Fix autotest LANG breakage.
	* testsuite/t_null.at: Account for chatter with --verbose.

2004-04-09  graydon hoare  <graydon@pobox.com>

	* configure.ac: Comment out check for sse2,
	set bundling to true by default.