@@ -1,3 +1,8 @@
+2004-04-25  Joel Rosdahl  <joel@rosdahl.net>
+
+	* cert.cc (get_branch_heads): Remove disapproved head candidates
+	correctly.
+
 2004-04-20  graydon hoare  <graydon@pobox.com>
 
 	* lua.hh, lua.cc (hook_note_commit): New hook.
